--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Kanaban.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Kanaban"
+             xmlns:local="clr-namespace:Kanaban" Exit="App_OnExit"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
