--- a/BoardColumn.xaml
+++ b/BoardColumn.xaml
@@ -1,31 +1,36 @@
 ﻿<UserControl x:Class="Kanaban.BoardColumn"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Kanaban" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:Kanaban"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" Loaded="AListBox_OnLoaded" x:Name="control"
              d:DesignHeight="450" d:DesignWidth="350">
-    <GroupBox Style="{StaticResource MaterialDesignCardGroupBox}" Header="{Binding ElementName=control , Path=ListType , FallbackValue=Header}" Margin="4">
+   
+    <GroupBox Style="{StaticResource MaterialDesignCardGroupBox}"
+              Header="{Binding ElementName=control , Path=ListType , FallbackValue=Header}" Margin="4">
         <materialDesign:DialogHost x:Name="host">
             <Grid>
-                <ListBox  Name="lst" Drop="UIElement_OnDrop"  AllowDrop="True" PreviewMouseLeftButtonDown="UIElement_OnPreviewMouseLeftButtonDown">
+                <ListBox Name="lst" Drop="UIElement_OnDrop" AllowDrop="True"
+                         PreviewMouseLeftButtonDown="UIElement_OnPreviewMouseLeftButtonDown">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                         </Style>
                     </ListBox.ItemContainerStyle>
                     <ListBox.ItemTemplate>
                         <DataTemplate DataType="local:WorkItem">
                             <DataTemplate.Resources>
-                                <local:PriorityToColorConverter x:Key="con"></local:PriorityToColorConverter>
+                                <local:PriorityToColorConverter x:Key="con" />
                             </DataTemplate.Resources>
-                            <Border Background="{Binding Priority , Converter={StaticResource con}}" Padding="4" CornerRadius="5">
+                            <Border Background="{Binding Priority , Converter={StaticResource con}}" Padding="4"
+                                    CornerRadius="5">
                                 <StackPanel>
-                                    <TextBlock FontSize="20" Text="{Binding Title}"/>
-                                    <TextBlock FontSize="15" Text="{Binding Description}" TextWrapping="Wrap"/>
-                                    <TextBlock FontSize="15" Text="{Binding Priority}" HorizontalAlignment="Right" Margin="3" FontWeight="Bold"/>
+                                    <TextBlock FontSize="20" Text="{Binding Title}" />
+                                    <TextBlock FontSize="15" Text="{Binding Description}" TextWrapping="Wrap" />
+                                    <TextBlock FontSize="15" Text="{Binding Priority}" HorizontalAlignment="Right"
+                                               Margin="3" FontWeight="Bold" />
                                 </StackPanel>
 
                             </Border>
@@ -33,16 +38,18 @@
                     </ListBox.ItemTemplate>
 
                     <ListBox.Items>
-                        <local:WorkItem></local:WorkItem>
+                        <local:WorkItem />
                     </ListBox.Items>
-                    
+
                     <ListBox.ContextMenu>
                         <ContextMenu>
-                            <MenuItem Header="Delete" Click="MenuItem_OnClick"/>
+                            <MenuItem Header="Delete" Click="MenuItem_OnClick" />
                         </ContextMenu>
                     </ListBox.ContextMenu>
                 </ListBox>
-                <Button HorizontalAlignment="Right" Style="{StaticResource MaterialDesignFloatingActionButton}" Content="+" FontSize="35" VerticalContentAlignment="Top" VerticalAlignment="Bottom"  Margin="0,0,20,20" Click="btn_add_click"/>
+                <Button HorizontalAlignment="Right" Style="{StaticResource MaterialDesignFloatingActionButton}"
+                        Content="+" FontSize="35" VerticalContentAlignment="Top" VerticalAlignment="Bottom"
+                        Margin="0,0,20,20" Click="btn_add_click" />
             </Grid>
         </materialDesign:DialogHost>
 
