--- a/ProjectEdit.xaml
+++ b/ProjectEdit.xaml
@@ -2,13 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Kanaban"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:input="clr-namespace:Kanaban.Input"
              mc:Ignorable="d" x:Name="This" MaxWidth="400" MaxHeight="300"
              d:DesignHeight="300" d:DesignWidth="400">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <TextBlock Text="Save Project" FontSize="15" HorizontalAlignment="Center" Margin="8"/>
         <input:InputText Margin="6" Label="Name " Text="{Binding ElementName=This , Path=CurrentProject.Name , Mode=TwoWay}" Width="306"/>
-        <Button  Content="Save" HorizontalAlignment="Center" Margin="6" Click="btn_save_click"/>
+        <Button IsDefault="True" Content="Save" HorizontalAlignment="Center" Margin="6" Click="btn_save_click"/>
     </StackPanel>
 </UserControl>
